syntax = "proto3";

package s3image;

service Imagetransporter {
    rpc ImageUpload (ImageUpoadRequest) returns (Message) {}
    rpc ImageStreamUpload (stream ImageUpoadRequest) returns (Message) {}
    rpc ImageDownload (ImageDownloadRequest) returns (ImageDownloadResponse) {}
}

message ImageUpoadRequest {
    bytes image = 1;
    string name = 2;
}

message Message {
    string message = 1;
}

message ImageDownloadRequest {
    string name = 1;
}

message ImageDownloadResponse {
    bytes image = 1;
}
